fix: rating and player name spacing fix: player vs player line break issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -505,6 +505,7 @@ a.navitem, div.navitem{
 	display: inline-block;
 	text-align: left;
 	vertical-align: middle;
+	width: auto !important;
 }
 
 .modal:after {
